syntax = "proto3";

package pb;

import "payment_method.proto";

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message GetPaymentMethodRequest {
    string        username = 1;
    string        crypto = 2;
    string        fiat = 3;
}

message GetPaymentMethodResponse {
    PaymentMethod paymentMethod = 1;
    string phone_number = 2;
}